# Hotel_Management_System

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  database.db  main.cpp  myhotel
EventHandler/: CMakeLists.txt  event.hpp  event_handler.cpp  event_handler.hpp
FrameHandler/: CMakeLists.txt  frame_handler.cpp  frame_handler.hpp  tuple_api.hpp
architecture/: hotel.eap  hotel.ldb
client/: client.py  integration_test.py
client/build-client-Desktop_x86_windows_msvc2019_pe_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
client/build-client-Desktop_x86_windows_msvc2019_pe_64bit-Debug/debug/: client.ilk  moc_tcp_client.cpp  moc_widget.cpp
client/client/: client.pro  main.cpp  tcp_client.h  widget.h
com/: CMakeLists.txt  com.cpp  com.hpp
database/: CMakeLists.txt  Makefile  database.cpp  database.hpp  database_config.hpp  hotel_config.hpp  item.hpp
database/include/: database.hpp
database/src/: database.cpp
database/test/: CMakeLists.txt  database.spec.cpp
db/: CMakeLists.txt  cmake_install.cmake  sqlite3
frame/: CMakeLists.txt  config.hpp  frame.cpp  frame.hpp
handler/: CMakeLists.txt  Makefile  handler.cpp  handler.hpp
hotel/: CMakeLists.txt  Makefile  cmake_install.cmake  hotel.hpp
integration_test/: integration_test.py
protocal/: CMakeLists.txt  cmake_install.cmake  protocal.hpp
protocol/: CMakeLists.txt  protocol.cpp  protocol.hpp
server/: CMakeLists.txt  Makefile  cmake_install.cmake  server.cpp  server.hpp
service/: CMakeLists.txt  Makefile  service.cpp  service.hpp
service_manager/: CMakeLists.txt  service_manager.cpp  service_manager.hpp
sqlite/: CMakeLists.txt  Makefile  cmake_install.cmake
sqlite_database/: database.hpp
src/: CMakeLists.txt
types/: types.hpp
